tweaked css to fix spacing issues with recipe list, improved appearance of restaurant list

--- a/style.css
+++ b/style.css
@@ -14,3 +14,25 @@ h1, h2 {
         padding: 2.5em 2.5em 0.5em 0em; 
     }
 }
+
+.features section {
+    padding: 3.5em 1em 1em 1em;
+}
+
+.features h3 {
+    text-align: center;
+}
+
+#restaurants p {
+    font-weight: bold;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80%;
+}
+
+.grey {
+    border: 1px solid rgb(202, 128, 177);
+    border-radius: 25px;
+    margin: 0 0 1px 0;
+    padding: 6px;
+}
